# mcp-server-api-call

./: README.md  main.py  pyproject.toml  test_api.py
src/mcp_server/: __main__.py  api_call.py
