[project]
name = "mcp-server-deployment-local-ops"
version = "0.1.0"
description = "MCP Server with capability of making API Calls"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.22.0",
    "requests>=2.32.5",
]

[project.scripts]
mcp-server = "mcp_server.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]